[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/DebugRoom.gd" type="Script" id=1]
[ext_resource path="res://scripts/Line.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Line1" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Line2" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="MyAngle" type="Label" parent="."]
margin_left = 550.0
margin_top = 230.0
margin_right = 590.0
margin_bottom = 244.0
text = "angle_between: 2.14"

[node name="GodotAngle" type="Label" parent="."]
margin_left = 550.0
margin_top = 200.0
margin_right = 590.0
margin_bottom = 214.0
text = "angle_to: 2.14"
